    (Junping Du via jianhe)

    MAPREDUCE-4785. TestMRApp occasionally fails (haibochen via rkanter)

    MAPREDUCE-6619. HADOOP_CLASSPATH is overwritten in MR container.
    (Junping Du via jianhe)

    MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
    and IndexOutOfBoundsException. (Junping Du via vvasudev)

Release 2.7.3 - UNRELEASED

    MAPREDUCE-6540. TestMRTimelineEventHandling fails (sjlee)

    MAPREDUCE-6377. JHS sorting on state column not working in webUi.
    (zhihai xu via devaraj)

    MAPREDUCE-5883. "Total megabyte-seconds" in job counters is slightly
    misleading (Nathan Roberts via jlowe)

    MAPREDUCE-6583. Clarify confusing sentence in MapReduce tutorial document.
    (Kai Sasaki via aajisaka)

    MAPREDUCE-6554. MRAppMaster servicestart failing with NPE in
    MRAppMaster#parsePreviousJobHistory (Bibin A Chundatt via jlowe)

    MAPREDUCE-6413. TestLocalJobSubmission is failing with unknown host
    (zhihai xu via jlowe)

    MAPREDUCE-6191. Improve clearing stale state of Java serialization
                    testcase.  (Sam Liu via Eric Yang)

    MAPREDUCE-6645. TestWordStats outputs logs under directories other than
    target/test-dir. (Gabor Liptak via aajisaka)

    MAPREDUCE-6580. Test failure: TestMRJobsWithProfiler.
    (Eric Badger via aajisaka)

    MAPREDUCE-5817. Mappers get rescheduled on node transition even after all
    reducers are completed. (Sangjin Lee via kasha)

    MAPREDUCE-6689. MapReduce job can infinitely increase number of reducer
    resource requests (Wangda Tan via jlowe)

    MAPREDUCE-6513. Job got hanged forever when one NM unstable for some
    time. Contributed by Varun Saxena & Wangda Tan

    MAPREDUCE-6558. multibyte delimiters with compressed input files generate
    duplicate records (Wilfred Spiegelenburg via jlowe)

Release 2.7.2 - 2016-01-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES
